# chd

./: LICENSE  README.md  manage.py  pyproject.toml
chd/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
checker/: models.py  tasks.py  utils.py
checker/management/commands/: initialize_tasks.py
checker/migrations/: 0001_initial.py
tgbot/: __init__.py  apps.py  bot.py  views.py
tgbot/handlers/: __init__.py  forget.py  help.py  list.py  start.py  watch.py
