[tool.poetry]
name = "chd"
version = "0.0.1"
description = "Detect website changes and notify via a bot"
authors = ["Alexander Rusakevich <mr.alexander.rusakevich@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
pytelegrambotapi = "^4.26.0"
dj-database-url = "^2.3.0"
pymysql = "^1.1.1"
django-db-prefix = "^1.0.5"
celery = "^5.4.0"
redis = "^5.2.1"
requests = "^2.32.3"
ua-generator = "^2.0.2"
django-celery-beat = "^2.7.0"
poethepoet = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
dev = "python manage.py runserver"
celery_worker = "celery -A chd worker --loglevel=info"
celery_beat = "celery -A chd beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler"
